docker-compose/heroku/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: iam
  name: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #ingress.kubernetes.io/ssl-redirect: "false"
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: iam-production-issuer
    #cert-manager.io/issue-temporary-certificate: "true"
    #kubernetes.io/tls-acme: 'true'


spec:
  #ingressClassName: nginx
  tls:
  - secretName: tls-cert
    hosts:
    - iam.bhn.technology
    - iam1.bhn.technology    
  rules:
    - host: iam.bhn.technology
      http:
        paths:        
        - path: /
          pathType: Prefix
          backend:
            service:
              name: keycloak
              port:
                number: 8080
