docker-compose/heroku/wso2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
  labels:
    cert-manager-tls: kubed  
---
apiVersion: v1
kind: Service
metadata:
  labels:
    com.bhn.service: apistudio
  name: apistudio
  namespace: api
spec:
  ports:
    - name: "admin"
      port: 9443
      targetPort: 9443
    - name: "nio"
      port: 8280
      targetPort: 8280
    - name: "nio-secure"
      port: 8243
      targetPort: 8243
  selector:
    com.bhn.service: apistudio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.bhn.service: apistudio
  name: apistudio
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      com.bhn.service: apistudio
  strategy: {}
  template:
    metadata:
      labels:
        com.bhn.service: apistudio
    spec:
      containers:
        - env:
            - name: API_DATABASE_URL
              value: ${API_DATABASE_URL}
            - name: SHARED_DATABASE_URL
              value: ${SHARED_DATABASE_URL}
            - name: ADMIN_USER
              value: ${ADMIN_USER}
            - name: ADMIN_PASSWORD
              value: ${ADMIN_PASSWORD}
            - name: ON_PREM_KEY
              value: ${ON_PREM_KEY}
            - name: ENV_API_HOSTNAME
              value: ${ENV_API_HOSTNAME}
            - name: ENV_API_GATEWAY
              value: ${ENV_API_GATEWAY}
          image: 982306614752.dkr.ecr.us-west-2.amazonaws.com/wso2-apim:latest
          name: apistudio
          ports:
            - containerPort: 9443
            - containerPort: 8280
            - containerPort: 8243
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: api
  name: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" 
spec:
  #ingressClassName: nginx
  tls:
  - secretName: tls-cert
    hosts:
    - ${ENV_API_HOSTNAME}
    - ${ENV_API_GATEWAY}
  rules:
    - host: ${ENV_API_HOSTNAME}
      http:
        paths:        
        - path: /
          pathType: Prefix
          backend:
            service:
              name: apistudio
              port:
                number: 9443
    - host: ${ENV_API_GATEWAY}
      http:
        paths:        
        - path: /
          pathType: Prefix
          backend:
            service:
              name: apistudio
              port:
                number: 8243
